--- a/styles.css
+++ b/styles.css
@@ -14,92 +14,56 @@ html{
     margin: auto;
 }
 /*nav bar style*/
-
-
-.header {
-  background-color: #fff;
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-  position: fixed;
-  width: 100%;
-  z-index: 3;
+.nav-bar{
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    padding: 30px 0;
 }
 
-.header ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
-  background-color: #fff;
+ .fixed-top{
+    position: fixed;
+    top: 0;
+    height: 50px;
+    padding: 30px 0;
+    background: white;
 }
-
-.header li a {
-  display: block;
-  padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
-  text-decoration: none;
+.nav-bar .max-width{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-
-.header li a:hover,
-.header .menu-btn:hover {
-  background-color: #f4f4f4;
+.nav-bar .brand a{
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
 }
-
-.header .logo {
-  display: block;
-  float: left;
-  font-size: 2em;
-  padding: 10px 20px;
-  text-decoration: none;
+.nav-bar .menu li a{
+    display: block;
+    color:whitesmoke;
+    margin-left: 20px;
+    font-size: 18px;
+    transition: color 0.3s ease;
 }
-
-/* menu */
-
-.header .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height .2s ease-out;
+.nav-bar .menu li a:hover{
+    color: #ffc0cb;
 }
-
-/* menu icon */
-
-.header .menu-icon {
-  cursor: pointer;
-  display: inline-block;
-  float: right;
-  padding: 28px 20px;
-  position: relative;
-  user-select: none;
+.nav-bar .menu li{
+    list-style-type: none;
+    display: inline-block;
 }
-
-.header .menu-icon .navicon {
-  background: #333;
+label {
+    margin: 0 20px 0 0;
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    width: 26px;
+    float: right;
+    color: white;
 }
-
-/* menu btn */
-
-.header .menu-btn {
-  display: none;
-}
-
-.header .menu-btn:checked ~ .menu {
-  max-height: 240px;
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent;
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg);
-}
-
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg);
-}
-
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0;
+#toggle {
+    display: none;
 }
 
 
@@ -220,23 +184,4 @@ section{
 i{
     font-size: 50px;
     color: black;
-}
-
-/* 48em = 768px */
-
-@media (min-width: 48em) {
-  .header li {
-    float: left;
-  }
-  .header li a {
-    padding: 20px 30px;
-  }
-  .header .menu {
-    clear: none;
-    float: right;
-    max-height: none;
-  }
-  .header .menu-icon {
-    display: none;
-  }
 }
