--- a/styles.css
+++ b/styles.css
@@ -53,23 +53,17 @@ html{
     list-style-type: none;
     display: inline-block;
 }
-label {
-    margin: 0 20px 0 0;
-    font-size: 26px;
-    line-height: 70px;
-    display: none;
-    width: 26px;
-    float: right;
-    color: white;
-}
-#toggle {
+.menu-btn{
+    color: black;
+    font-size: 23px;
+    cursor: pointer;
     display: none;
 }
 
 
 /*home style*/
 .home{
-    display: flex;
+    display:flex;
     background: url("Images/background3.jpg") no-repeat center;
     height: 100vh;
     color: white;
@@ -181,7 +175,118 @@ section{
     align-items: center;
     justify-content: space-between;
 }
-i{
+#btn {
     font-size: 50px;
     color: black;
 }
+
+
+
+@media (max-width: 1104px) {
+    .about .about-content .column-left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px) {
+    .max-width{
+        padding: 0 50px;
+    }
+}
+@media (max-width: 947px){
+    .menu-btn{
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active:before{
+        content: "\f00d";
+        color: white;
+    }
+    .nav-bar .menu li a{
+        color: whitesmoke;
+    }
+    .nav-bar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 0.3s ease;
+    }
+    .nav-bar .menu.active{
+        left: 0;
+    }
+    .nav-bar .menu li{
+        display: block;
+    }
+    .nav-bar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home{
+        background-position:25% ;
+    }
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+    .max-width{
+        max-width: 930px;
+    }
+    .about .about-content .column-left,
+    .column-right{
+        width: 100%;
+    }
+    .about .about-content .column-left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .column-right{
+        flex: 100%;
+    }
+
+    .contact {
+        width: 100%;
+        margin-bottom: 35px;
+    }
+}
+
+@media (max-width: 690px) {
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content a{
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 500px) {
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
+    .about .about-content .column-right .text{
+        font-size: 19px;
+    }
+}
+
