--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ section{
         color: white;
     }
     .nav-bar .menu li a{
-        color: whitesmoke;
+        color: white;
     }
     .nav-bar .menu{
         position: fixed;
