--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@
 */
 
 html {
+  margin: 0;
+  padding: 0;
   line-height: 1.5;
   /* 1 */
   -webkit-text-size-adjust: 100%;
@@ -53,6 +55,7 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   /* 1 */
   line-height: inherit;
   /* 2 */
